--- a/package.json
+++ b/package.json
@@ -10,6 +10,20 @@
   "author": "Vihan",
   "license": "ISC",
   "dependencies": {
-    "passport-facebook": "^3.0.0"
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "fs": "0.0.1-security",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.4.4",
+    "mongoose-findorcreate": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "slugify": "^1.6.5"
   }
 }
